--- a/src/WrldcHrIs.WebApp/Pages/Shared/_Layout.cshtml
+++ b/src/WrldcHrIs.WebApp/Pages/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - WrldcHrIs.WebApp</title>
+    <title>@ViewData["Title"] - WrldcHrIs</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
@@ -11,19 +11,21 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">WrldcHrIs.WebApp</a>
+                <a class="navbar-brand" asp-area="" asp-page="/Index">WrldcHrIs</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+                    <partial name="_LoginPartial" />
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
-                        </li>
+                        @*<li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
+                            </li>*@
+                        <partial name="_AuthorizedPartial" />
                     </ul>
                 </div>
             </div>
@@ -31,13 +33,14 @@
     </header>
     <div class="container">
         <main role="main" class="pb-3">
+            <partial name="_StatusBaloonPartial" model=@TempData["StatusBaloon"] />
             @RenderBody()
         </main>
     </div>
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - WrldcHrIs.WebApp - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2021 - WrldcHrIs - <a asp-area="" asp-page="/Privacy">Privacy</a>
         </div>
     </footer>
 
