--- a/src/WrldcHrIs.WebApp/Pages/Shared/_AuthorizedPartial.cshtml
+++ b/src/WrldcHrIs.WebApp/Pages/Shared/_AuthorizedPartial.cshtml
@@ -20,7 +20,7 @@
         </li>
     }
     <li class="nav-item">
-        <a class="nav-link text-dark" asp-page="/Index">My Data</a>
+        <a class="nav-link text-dark" asp-page="/Users/MyDetails">My Details</a>
     </li>
 
 }
