--- a/src/WrldcHrIs.WebApp/Pages/Shared/_AuthorizedPartial.cshtml
+++ b/src/WrldcHrIs.WebApp/Pages/Shared/_AuthorizedPartial.cshtml
@@ -17,6 +17,9 @@
             <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                 <a class="dropdown-item" asp-page="/Users/Index">Users</a>
             </div>
+            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                <a class="dropdown-item" asp-page="/Users/Departments">Departments</a>
+            </div>
         </li>
     }
     <li class="nav-item">
