minor ui bug in menu display

--- a/src/WrldcHrIs.WebApp/Pages/Shared/_AuthorizedPartial.cshtml
+++ b/src/WrldcHrIs.WebApp/Pages/Shared/_AuthorizedPartial.cshtml
@@ -16,9 +16,7 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                 <a class="dropdown-item" asp-page="/Users/Index">Users</a>
-            </div>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                <a class="dropdown-item" asp-page="/Users/Departments">Departments</a>
+                <a class="dropdown-item" asp-page="/Departments/Index">Departments</a>
             </div>
         </li>
     }
