food items management ui done

--- a/src/WrldcHrIs.WebApp/Pages/Users/Index.cshtml
+++ b/src/WrldcHrIs.WebApp/Pages/Users/Index.cshtml
@@ -15,6 +15,7 @@
                     <tr>
                         <th>Username</th>
                         <th>DisplayName</th>
+                        <th>Application Role</th>
                         <th>Email</th>
                         <th>PhoneNumber</th>
                         <th>OfficeId</th>
@@ -30,6 +31,7 @@
                         <tr>
                             <td>@user.Username</td>
                             <td>@user.DisplayName</td>
+                            <td>@user.UserRole</td>
                             <td>@user.Email</td>
                             <td>@user.PhoneNumber</td>
                             <td>@user.OfficeId</td>
@@ -48,6 +50,7 @@
                     <tr>
                         <th>Username</th>
                         <th>DisplayName</th>
+                        <th>Application Role</th>
                         <th>Email</th>
                         <th>PhoneNumber</th>
                         <th>OfficeId</th>
