--- a/src/WrldcHrIs.WebApp/Pages/Shared/_AuthorizedPartial.cshtml
+++ b/src/WrldcHrIs.WebApp/Pages/Shared/_AuthorizedPartial.cshtml
@@ -17,11 +17,17 @@
             <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                 <a class="dropdown-item" asp-page="/Users/Index">Users</a>
                 <a class="dropdown-item" asp-page="/Departments/Index">Departments</a>
+                <a class="dropdown-item" asp-page="/FoodItems/Index">Food Items</a>
             </div>
+        </li>
+    }
+    @if (User.IsInRole(SecurityConstants.CanteenMgrRoleString))
+    {
+        <li class="nav-item">
+            <a class="nav-link text-dark" asp-page="/FoodItems/Index">Food Items</a>
         </li>
     }
     <li class="nav-item">
         <a class="nav-link text-dark" asp-page="/Users/MyDetails">My Details</a>
     </li>
-
 }
