--- a/src/WrldcHrIs.WebApp/Pages/Shared/_AuthorizedPartial.cshtml
+++ b/src/WrldcHrIs.WebApp/Pages/Shared/_AuthorizedPartial.cshtml
@@ -17,17 +17,25 @@
             <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                 <a class="dropdown-item" asp-page="/Users/Index">Users</a>
                 <a class="dropdown-item" asp-page="/Departments/Index">Departments</a>
-                <a class="dropdown-item" asp-page="/FoodItems/Index">Food Items</a>
             </div>
         </li>
     }
-    @if (User.IsInRole(SecurityConstants.CanteenMgrRoleString))
+    @if (User.IsInRole(SecurityConstants.CanteenMgrRoleString) || User.IsInRole(SecurityConstants.AdminRoleString))
     {
-        <li class="nav-item">
-            <a class="nav-link text-dark" asp-page="/FoodItems/Index">Food Items</a>
+        <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" id="canteenDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Canteen
+            </a>
+            <div class="dropdown-menu" aria-labelledby="canteenDropdownMenuLink">
+                <a class="dropdown-item" asp-page="/FoodItems/Index">Food Items</a>
+                <a class="dropdown-item" asp-page="/CanteenOrders/ViewOrders">View Orders</a>
+            </div>
         </li>
     }
     <li class="nav-item">
         <a class="nav-link text-dark" asp-page="/Users/MyDetails">My Details</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link text-dark" asp-page="/CanteenOrders/Index">My Orders</a>
     </li>
 }
