--- a/src/WrldcHrIs.WebApp/Pages/Shared/_AuthorizedPartial.cshtml
+++ b/src/WrldcHrIs.WebApp/Pages/Shared/_AuthorizedPartial.cshtml
@@ -28,7 +28,7 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="canteenDropdownMenuLink">
                 <a class="dropdown-item" asp-page="/FoodItems/Index">Food Items</a>
-                <a class="dropdown-item" asp-page="/CanteenOrders/ViewOrders">View Orders</a>
+                <a class="dropdown-item" asp-page="/CanteenOrders/ViewOrders">Orders</a>
             </div>
         </li>
     }
