--- a/src/WrldcHrIs.WebApp/Pages/CanteenOrders/ViewOrders.cshtml
+++ b/src/WrldcHrIs.WebApp/Pages/CanteenOrders/ViewOrders.cshtml
@@ -24,6 +24,7 @@
                 <thead>
                     <tr>
                         <th>Date</th>
+                        <th>Customer</th>
                         <th>Item</th>
                         <th>Quantity</th>
                         <th>Actions</th>
@@ -34,6 +35,7 @@
                     {
                         <tr>
                             <td><span class="d-none">@(ordr.OrderDate.ToString("yyyy-MM-dd"))</span><span>@(ordr.OrderDate.ToString("dd-MMM-yyyy"))</span></td>
+                            <td>@ordr.Customer.UserName</td>
                             <td>@ordr.FoodItemName</td>
                             <td>@ordr.OrderQuantity</td>
                             <td>
@@ -46,6 +48,7 @@
                 <tfoot>
                     <tr>
                         <th>Date</th>
+                        <th>Customer</th>
                         <th>Item</th>
                         <th>Quantity</th>
                         <th>Actions</th>
