--- a/src/WrldcHrIs.WebApp/Pages/FoodItems/Delete.cshtml
+++ b/src/WrldcHrIs.WebApp/Pages/FoodItems/Delete.cshtml
@@ -19,22 +19,22 @@
             @Html.DisplayFor(model => model.FoodItem.Name)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.FoodItem.CreatedBy)
+            @Html.DisplayNameFor(model => model.FoodItem.Description)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.FoodItem.CreatedBy)
+            @Html.DisplayFor(model => model.FoodItem.Description)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.FoodItem.Price)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.FoodItem.Price)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.FoodItem.Created)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.FoodItem.Created)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.FoodItem.LastModifiedBy)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.FoodItem.LastModifiedBy)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.FoodItem.LastModified)
