--- a/src/WrldcHrIs.WebApp/Pages/FoodItems/Edit.cshtml
+++ b/src/WrldcHrIs.WebApp/Pages/FoodItems/Edit.cshtml
@@ -18,6 +18,16 @@
                 <input asp-for="FoodItem.Name" class="form-control" />
                 <span asp-validation-for="FoodItem.Name" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="FoodItem.Description" class="control-label"></label>
+                <input asp-for="FoodItem.Description" class="form-control" />
+                <span asp-validation-for="FoodItem.Description" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="FoodItem.Price" class="control-label"></label>
+                <input asp-for="FoodItem.Price" class="form-control" />
+                <span asp-validation-for="FoodItem.Price" class="text-danger"></span>
+            </div>
             <input type="hidden" asp-for="FoodItem.Id" />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
