--- a/src/WrldcHrIs.WebApp/Pages/FoodItems/Index.cshtml
+++ b/src/WrldcHrIs.WebApp/Pages/FoodItems/Index.cshtml
@@ -17,6 +17,12 @@
                 @Html.DisplayNameFor(model => model.FoodItem[0].Name)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.FoodItem[0].Description)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.FoodItem[0].Price)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.FoodItem[0].Created)
             </th>
             <th>
@@ -31,6 +37,12 @@
             <tr>
                 <td>
                     @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Description)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Price)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Created)
