--- a/src/WrldcHrIs.WebApp/Pages/CanteenOrders/ViewOrders.cshtml
+++ b/src/WrldcHrIs.WebApp/Pages/CanteenOrders/ViewOrders.cshtml
@@ -27,6 +27,8 @@
                         <th>Customer</th>
                         <th>Item</th>
                         <th>Quantity</th>
+                        <th>Amount</th>
+                        <th>Item Description</th>
                         <th>Actions</th>
                     </tr>
                 </thead>
@@ -38,6 +40,8 @@
                             <td>@ordr.Customer.UserName</td>
                             <td>@ordr.FoodItemName</td>
                             <td>@ordr.OrderQuantity</td>
+                            <td>@(ordr.FoodItemUnitPrice*ordr.OrderQuantity)</td>
+                            <td>@ordr.FoodItemDescription</td>
                             <td>
                                 <a asp-page="./EditOrder" asp-route-id="@ordr.Id">Edit</a> |
                                 <a asp-page="./Delete" asp-route-id="@ordr.Id">Delete</a>
@@ -51,6 +55,8 @@
                         <th>Customer</th>
                         <th>Item</th>
                         <th>Quantity</th>
+                        <th>Amount</th>
+                        <th>Item Description</th>
                         <th>Actions</th>
                     </tr>
                 </tfoot>
