details page for admin user done

--- a/src/WrldcHrIs.WebApp/Pages/Shared/_AuthorizedPartial.cshtml
+++ b/src/WrldcHrIs.WebApp/Pages/Shared/_AuthorizedPartial.cshtml
@@ -33,7 +33,7 @@
         </li>
     }
     <li class="nav-item">
-        <a class="nav-link text-dark" asp-page="/Users/MyDetails">My Details</a>
+        <a class="nav-link text-dark" asp-page="/Users/Details">My Details</a>
     </li>
     <li class="nav-item">
         <a class="nav-link text-dark" asp-page="/CanteenOrders/Index">My Orders</a>
